adjusting setup next goal initialize correct API